--- a/top3team.css
+++ b/top3team.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Teko:wght@300;400;500;600&display=swap');
 
-.elimframe1{
+.elimframe10{
     height: 1080px;
     width: 1920px;
     display: flex;
     align-items: center;
+    justify-content: center;
 
+}
+.teamstats{
+    margin-right: 90px;
 }
 .logoframe5 {
     background-color: #003557;
@@ -14,9 +18,9 @@
     box-shadow: inset 0px 0px 25px -4px #000000ed;
     height: 70px;
     width: 70px;
-    position: absolute;
-    left: 278px;
-    top: 352px;
+    position: relative;
+    left: 0px;
+    top: -75px;
     transform: rotate(-45deg);
     overflow: hidden;
 }
@@ -32,9 +36,6 @@
 }
 
 .group12{
-    position: absolute;
-    left: 250px;
-    top: 406px;
     height: 28px;
     width: 281px;
     background-color: #0182d5;
@@ -51,17 +52,17 @@
     height: 35px;
     width: 46px;
     background-color: #0182d5;
-    position: absolute;
-    left: 528px;
-    top: 369px;
+    position: relative;
+    left: 264px;
+    top: -114px ;
     clip-path: polygon(80.5% 0%, 100% 0%, 20.5% 100%, 0% 100%);
     opacity: 0.7;
 }
 
 .alive{
-    position: absolute;
-    left: 263px;
-    top: 369px;
+    position: relative;
+   
+    top: 0px;
     height: 36px;
     width: 298px;
     background-color: #003557;
@@ -71,19 +72,14 @@
     clip-path: polygon(13.5% 0%, 100% 0%, 86.5% 100%, 0% 100%);
 }
 
-.NTH{
-    width: 1920px;
-    height: 1080px;
-    position: absolute;
-    top: 320px;
-}
+
 .wwcd{
-    position: absolute;
-    left: 110px;
+    position: relative;
+    
 }
 .percentage{
-    position: absolute;
-    left: 200px;
+    position: relative;
+    left: 55px;
     
 }
 
@@ -96,3 +92,15 @@
     position: relative;
     left: 30px;
 }
+.player1True {
+    background-color: rgb(255, 0, 0);
+  }
+  
+  .player1False {
+    background-color: white
+  }
+  .allPlayersTrue1 {
+   
+    opacity: 0.0; 
+  }
+  
